crates/kyzo-core/tests/compile_fail/validity_raw_i64_refused.stderr
error[E0308]: mismatched types
  --> tests/compile_fail/validity_raw_i64_refused.rs:21:27
   |
21 |     let _ = Validity::new(i64::MAX, true);
   |             ------------- ^^^^^^^^ expected `ValidityTs`, found `i64`
   |             |
   |             arguments to this function are incorrect
   |
note: associated function defined here
  --> $WORKSPACE/crates/kyzo-model/src/value/kind/validity.rs
   |
   |     pub fn new(timestamp: ValidityTs, is_assert: bool) -> Option<Validity> {
   |            ^^^
